Chunked fallback for trend endpoint when aggregation query fails (#156)
* Add chunked fallback for trend endpoint when aggregation query times out

When the primary JSON_ARRAYAGG query fails (due to max_allowed_packet or
timeout), falls back to fetching test suites individually from normalized
tables in parallel. Fallback capped at 30 runs max. Adds X-Trend-Source:
fallback response header so users can verify which path was taken.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* Harden fallback: bounded executor, per-future error handling, timeout, clean controller pattern

- Add dedicated 8-thread daemon pool for parallel test suite fetches
- Add .exceptionally() per-future so one bad record doesn't kill the batch
- Add 15s timeout on CompletableFuture.allOf()
- Refactor stitchTestSuitesIntoGraph into fetchTestSuitesAsync + rebuildGraphWithSuites
- Use RecordBuilder wither pattern instead of manual 14-arg constructors
- Simplify controllers: single try/catch with Math.min(runs, 30) cap on fallback
- Replace MockMvc fallback test with direct controller test (Mockito @ExtendWith)
- Add fallbackCapsRunsAt30 test verifying the 30-run cap

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* Move fallback logic into service, add usedFallback wither, request-scoped thread pool

Service owns try/catch + fallback internally. Controllers are trivial
pass-throughs. @With on usedFallback field lets API consumers observe
when fallback was used. Thread pool is request-scoped (newCachedThreadPool)
instead of a shared static pool — no artificial bound on I/O-bound work,
HikariCP connection pool is the natural throttle. Timeout bumped to 60s
to account for connection pool blocking.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

---------

Co-authored-by: eric-r-driggs <eric.driggs@disney.com>
Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>